--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js",
     "build": "parcel build ./src/public/index.html"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "babel-loader": "^9.1.3",
+    "nodemon": "^3.1.0",
     "parcel-bundler": "^1.12.5"
   }
 }
