--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
         "Globalfingerprint"
-    ]
+    ],
+    "python.pythonPath": "C:\\Users\\Lion Witte\\anaconda3\\envs\\newenv\\python.exe"
 }
