--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,8 @@ public
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test/
 node_modules/
+package-lock.json
+training.log
+.vscode/settings.json
+tf-gpu/
+.vscode/launch.json
