--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,20 @@
+version: '3.8'
+
 services:
   app:
-    build:
-      context: .
-      dockerfile: Enviroment/Dockerfiles/Dockerfile.app
+    build: .
     ports:
       - "3000:3000"
-    depends_on:
-      - db
+    volumes:
+      - .:/usr/src/app
     environment:
-      - DATABASE_HOST=db
-      - DATABASE_PORT=3306
+      - NODE_ENV=development
   db:
-    build:
-      context: .
-      dockerfile: Enviroment/Dockerfiles/Dockerfile.db
-    environment: 
-      MYSQL_ROOT_PASSWORD: KOBIL123!
-      MYSQL_DATABASE: fingerprint
-    restart: always
+    image: mongo:latest
     ports:
-      - "3306:3306"
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
