--- a/package.json
+++ b/package.json
@@ -10,37 +10,22 @@
     "build": "parcel build ./src/public/index.html"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^4.20.0",
-    "@tensorflow/tfjs-node": "^4.20.0",
-    "assert": "^2.1.0",
-    "axios": "^1.7.2",
-    "brain.js": "^2.0.0-beta.23",
-    "browserify-fs": "^1.0.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow/tfjs-node": "^4.17.0",
+    "axios": "^1.6.8",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0",
-    "mysql": "^2.18.1",
-    "net-browserify": "^0.2.4",
-    "node-fetch": "^3.3.2",
-    "path-browserify": "^1.0.1",
-    "querystring-es3": "^0.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.3",
-    "util": "^0.12.5",
-    "vm-browserify": "^1.1.2"
+    "mongoose": "^8.2.3",
+    "winston": "^3.12.0"
   },
   "author": "Lion Witte",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
     "babel-loader": "^9.1.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "parcel-bundler": "^1.12.5",
-    "supertest": "^7.0.0"
+    "parcel": "^2.12.0",
+    "supertest": "^6.3.4"
   }
 }
